# bpf-inside

./: .gitignore  .gitmodules  LICENSE  README.md
doc/: 01-write a bpf program with libbpf.md  02-01-Performance Counters for Linux.md  02-Performance Counters for Linux.md  03-tracepoint inside.md  04-cpu pmu.md  05-software pmu.md  06-kprobe pmu.md  07-uprobe.md  08-raw tracepoint.md  09-fentry.md  10-kprobe_multi.md  11-bpf lsm.md  12-xdp.md  13-sockfilter.md  14-tc.md  15-lwt.md  16-iptables_bpf.md  17-sk_lookup.md  18-cgroup.md  19-struct_ops.md  20-flow_dissector.md  21-sockmap.md  22-lirc_mode2.md  23-bpf_iter.md  24-hw-breakpoint.md  25-netfilter_link.md  26-uprobe_multi.md  27-tc_express.md  28-netkit.md  29-test_run.md
src/: CMakeLists.txt  Makefile  bpf_iter.bpf.c  bpf_iter.c  data_breakpoint.bpf.c  data_breakpoint.c  data_breakpoint.h  iptables_test.bpf.c  iptables_test.c  iptables_test.h  kprobe_multi.bpf.c  kprobe_multi.c  ksyscall.bpf.c  lsm_connect.bpf.c  lsm_connect.c  netfilter_link_attach.c  profile.bpf.c  runqlen.bpf.c  tc.c  tcx.bpf.c  tcx.c  test_lirc_mode2.c  test_lirc_mode2.sh  test_lwt_bpf.sh  uprobe.c  uprobe_multi.c  xdp.c
